--- a/com.cet325.bg51az/app/src/main/res/layout/activity_main.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/activity_main.xml
@@ -9,5 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.bg51az.comcet325bg51az.MainActivity">
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/android:list"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
