Picutres and UI
Added images for the sites ready, attempted to sort out the layout of
the app

--- a/com.cet325.bg51az/app/src/main/res/layout/tourist_list_item.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/tourist_list_item.xml
@@ -8,7 +8,8 @@
     <ImageView
         android:layout_width="72dp"
         android:layout_height="72dp"
-        android:id="@+id/imageIcon" />
+        android:id="@+id/imageIcon"
+        android:src="@drawable/earthIcon"/>
 
     <TextView
         android:id="@+id/nameTextView"
