--- a/com.cet325.bg51az/app/src/main/res/layout/activity_main.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,45 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.bg51az.comcet325bg51az.MainActivity">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/android:list"
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_viewList"
+                android:id="@+id/btn_viewList" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_favCurrency"
+                android:id="@+id/btn_favCurr" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_about"
+                android:id="@+id/btn_about" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageLondon"
+            android:src="@drawable/london"/>
+    </LinearLayout>
 </RelativeLayout>
