--- a/com.cet325.bg51az/app/src/main/res/layout/tourist_list_item.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/tourist_list_item.xml
@@ -6,38 +6,93 @@
     android:padding="4dp">
 
     <ImageView
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="74dp"
+        android:layout_height="74dp"
         android:id="@+id/imageIcon"
-        android:src="@drawable/earthIcon"/>
+        android:src="@drawable/earthIcon"
+        android:layout_marginTop="12dp"/>
 
     <TextView
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="16dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginLeft="10dp"
         android:layout_toEndOf="@+id/imageIcon"
         android:layout_toRightOf="@id/imageIcon"
-        android:text="Dummy Text"
+        android:text="Dummy Name"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/locationTextView"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="16dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="10dp"
         android:layout_toEndOf="@id/imageIcon"
         android:layout_toRightOf="@id/imageIcon"
         android:layout_below="@id/nameTextView"
-        android:text="Dummy Text"
+        android:text="Dummy Location"
         android:textColor="@android:color/black"
-        android:textSize="14sp"/>
+        android:textSize="12sp"/>
 
+    <TextView
+        android:id="@+id/descriptionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="10dp"
+        android:layout_toEndOf="@id/imageIcon"
+        android:layout_toRightOf="@id/imageIcon"
+        android:layout_below="@id/locationTextView"
+        android:text="Dummy Description"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"/>
+
+    <TextView
+        android:id="@+id/geolocationTextView"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="10dp"
+        android:layout_toEndOf="@id/imageIcon"
+        android:layout_toRightOf="@id/imageIcon"
+        android:layout_below="@id/descriptionTextView"
+        android:text="Dummy Geolocation"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"/>
+
+    <TextView
+        android:id="@+id/priceTextView"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="10dp"
+        android:layout_toEndOf="@id/imageIcon"
+        android:layout_toRightOf="@id/imageIcon"
+        android:layout_below="@id/geolocationTextView"
+        android:text="Dummy Price"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"/>
+
+    <TextView
+        android:id="@+id/rankTextView"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="10dp"
+        android:layout_toEndOf="@id/imageIcon"
+        android:layout_toRightOf="@id/imageIcon"
+        android:layout_below="@id/priceTextView"
+        android:text="Dummy Rank"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"/>
 </RelativeLayout>
