Db changes, lists, linking together
Linking app together added data for the 10 sites

--- a/com.cet325.bg51az/app/src/main/res/layout/tourist_list_item.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/tourist_list_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="74dp"
         android:layout_height="74dp"
         android:id="@+id/imageIcon"
-        android:src="@drawable/earthIcon"
+        android:src="@drawable/earth"
         android:layout_marginTop="12dp"/>
 
     <TextView
