--- a/com.cet325.bg51az/app/src/main/res/layout/activity_main.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.bg51az.comcet325bg51az.MainActivity">
 
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -25,7 +24,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="74dp"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_viewList"
                 android:id="@+id/btn_viewList" />
@@ -33,8 +32,14 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/btn_favCurrency"
-                android:id="@+id/btn_favCurr" />
+                android:text="@string/btn_weather"
+                android:id="@+id/btn_weather" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_currency"
+                android:id="@+id/btn_currency" />
 
             <Button
                 android:layout_width="wrap_content"
