--- a/com.cet325.bg51az/app/src/main/res/menu/menu_main.xml
+++ b/com.cet325.bg51az/app/src/main/res/menu/menu_main.xml
@@ -5,8 +5,8 @@
     tools:context="com.example.bg51az.comcet325bg51az.list_tourists">
 
     <item
-        android:id="@+id/addLocation"
+        android:id="@+id/favCurrency"
         android:orderInCategory="100"
-        android:title="@string/add_location"
+        android:title="@string/fav_Currency"
         app:showAsAction="never"/>
 </menu>
