Add, Edit, Delete
Add and Delete working, Edit set up not currently finished

--- a/com.cet325.bg51az/app/src/main/res/layout/activity_weather.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/activity_weather.xml
@@ -143,7 +143,7 @@
         android:layout_centerHorizontal="true"
         android:inputType="text"
         android:lines="1"
-        android:hint="@string/city"
+        android:hint="@string/country"
         android:layout_marginTop="@dimen/margin_space" />
 
     <Button
