Add, Update, Delete Working
Currently working app, commit before adding Menu options and currency
integration

--- a/com.cet325.bg51az/app/src/main/res/layout/tourist_list_update.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/tourist_list_update.xml
@@ -70,6 +70,7 @@
         android:id="@+id/editUpdateTouristNotes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/notesInput"/>
+        android:hint="@string/notesInput"
+        android:maxLength="1024" />
 
 </LinearLayout>
