--- a/com.cet325.bg51az/app/src/main/res/layout/tourist_list_add.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/tourist_list_add.xml
@@ -69,6 +69,7 @@
         android:id="@+id/editInputTouristNotes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/notesInput"/>
+        android:hint="@string/notesInput"
+        android:maxLength="1024" />
 
 </LinearLayout>
