--- a/com.cet325.bg51az/app/src/main/res/layout/activity_main.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.bg51az.comcet325bg51az.MainActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ImageView
+        style="@style/BackgroundImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:weightSum="1">
+        android:id="@+id/imageLondon"
+        android:layout_alignParentTop="true"/>
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_space">
+            android:layout_margin="@dimen/margin_space"
+            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true">
 
             <Button
-                android:layout_width="wrap_content"
+                style="@style/ButtonColour"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_viewList"
-                android:id="@+id/btn_viewList" />
+                android:id="@+id/btn_viewList"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"/>
 
             <Button
-                android:layout_width="wrap_content"
+                style="@style/ButtonColour"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_weather"
-                android:id="@+id/btn_weather" />
+                android:id="@+id/btn_weather"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"/>
 
             <Button
-                android:layout_width="wrap_content"
+                style="@style/ButtonColour"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_about"
-                android:id="@+id/btn_about" />
+                android:id="@+id/btn_about"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"/>
 
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageLondon"
-            android:src="@drawable/london"/>
-    </LinearLayout>
 </RelativeLayout>
