--- a/com.cet325.bg51az/app/src/main/res/layout/tourist_list_item.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/tourist_list_item.xml
@@ -2,15 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:padding="4dp">
+    android:gravity="center_vertical">
 
     <ImageView
-        android:layout_width="74dp"
-        android:layout_height="74dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:id="@+id/imageIcon"
         android:src="@drawable/earth"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="2dp"
         android:background="@drawable/image_border"
         android:padding="2dp"/>
 
@@ -20,8 +19,7 @@
         android:layout_height="16dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="1dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="@dimen/margin_left"
         android:layout_toEndOf="@+id/imageIcon"
         android:layout_toRightOf="@id/imageIcon"
         android:text="Dummy Name"
@@ -34,7 +32,7 @@
         android:layout_height="16dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="@dimen/margin_left"
         android:layout_toEndOf="@id/imageIcon"
         android:layout_toRightOf="@id/imageIcon"
         android:layout_below="@id/nameTextView"
@@ -48,7 +46,7 @@
         android:layout_height="16dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="@dimen/margin_left"
         android:layout_toEndOf="@id/imageIcon"
         android:layout_toRightOf="@id/imageIcon"
         android:layout_below="@id/locationTextView"
@@ -62,7 +60,7 @@
         android:layout_height="16dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="@dimen/margin_left"
         android:layout_toEndOf="@id/imageIcon"
         android:layout_toRightOf="@id/imageIcon"
         android:layout_below="@id/descriptionTextView"
@@ -76,7 +74,7 @@
         android:layout_height="16dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="@dimen/margin_left"
         android:layout_toEndOf="@id/imageIcon"
         android:layout_toRightOf="@id/imageIcon"
         android:layout_below="@id/geolocationTextView"
@@ -90,11 +88,12 @@
         android:layout_height="16dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="@dimen/margin_left"
         android:layout_toEndOf="@id/imageIcon"
         android:layout_toRightOf="@id/imageIcon"
         android:layout_below="@id/priceTextView"
         android:text="Dummy Rank"
         android:textColor="@android:color/black"
         android:textSize="12sp"/>
+
 </RelativeLayout>
