--- a/com.cet325.bg51az/app/src/main/res/values/dimens.xml
+++ b/com.cet325.bg51az/app/src/main/res/values/dimens.xml
@@ -1,8 +1,9 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">30dp</dimen>
     <dimen name="margin_space">16dp</dimen>
+    <dimen name="margin_left">6dp</dimen>
 
     <dimen name="text_length">200dp</dimen>
     <dimen name="text_size">16dp</dimen>
