--- a/com.cet325.bg51az/app/src/main/res/values/styles.xml
+++ b/com.cet325.bg51az/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="BackgroundImageView">
+        <item name="android:alpha">0.5</item>
+        <item name="android:scaleType">fitXY</item>
+        <item name="android:background">@drawable/london</item>
+    </style>
+
+    <style name="ButtonColour">
+        <item name="android:textColor">@color/buttonText</item>
+        <item name="android:textColorHighlight">@color/buttonHighlight</item>
+        <item name="android:backgroundTint">@color/buttonBackground</item>
+    </style>
 </resources>
