--- a/com.cet325.bg51az/app/src/main/res/layout/tourist_list_update.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/tourist_list_update.xml
@@ -51,6 +51,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="@dimen/text_size"
+            android:text="@string/favouriteInput" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/checkBoxUpdateFav"
+            android:onClick="favClicked"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <EditText
             android:id="@+id/editUpdateTouristLatitude"
             android:layout_width="175dp"
