--- a/com.cet325.bg51az/app/src/main/res/layout/tourist_list_detail.xml
+++ b/com.cet325.bg51az/app/src/main/res/layout/tourist_list_detail.xml
@@ -61,6 +61,25 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="@dimen/text_size"
+            android:text="@string/favouriteInput" />
+
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ratingBarDisplayFav"
+            android:numStars="1"
+            android:stepSize="1.0" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
